Added styling to user views

--- a/app/views/docs/_form.html.haml
+++ b/app/views/docs/_form.html.haml
@@ -1,4 +1,16 @@
+
 = simple_form_for @doc do |f|
-  = f.input :title
-  = f.input :content
-  = f.button :submit
+  .form-group
+    .form-label.col-sm-8.col-sm-offset-2
+      = f.input :title, label: false, placeholder: "Title"
+    %br
+    %br
+    .form-group
+      .form-label.col-sm-8.col-sm-offset-2
+        = f.input :content, label: false, placeholder: "Conent"
+    %br
+    %br
+    .form-group
+      .form-label.col-sm-8.col-sm-offset-2
+        = f.button :submit, class: "btn btn-primary btn-large"
+        = link_to "Nevermind", root_path, class: "btn btn-info btn-large"
