--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,5 +1,8 @@
-%h1 Edit Document
+.container
+    .jumbotron
+        %h2 Edit Doc
+        %br
+        = render 'form'
 
-= render 'form'
 
-= link_to "Cancel", docs_path
+
