--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,8 @@
 .jumbotron.homebanner
     %h1 Organize Your Life
     %h3 If life is an open door, you should have an open storage.
-    %button.btn.btn-primary.btn-large= link_to "Sign up", new_user_registration_path, {:style=>'color:#FFFFFF;'}
-    %button.btn.btn-info.btn-large= link_to "Log in", new_user_session_path, {:style=>'color:#FFFFFF;'}
+    %br
+    .btngroup
+        = link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg"
+        = link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg"
         
