--- a/app/views/docs/show.html.haml
+++ b/app/views/docs/show.html.haml
@@ -1,6 +1,7 @@
-%h1= @doc.title
-%p= @doc.content
-
-= link_to "All Documents", docs_path
-= link_to "Fix Document", edit_doc_path(@doc)
-= link_to "Trash", doc_path(@doc), method: :delete, data: {confirm: "Are you sure?"}
+.jumbotron
+    .container
+        %h1= @doc.title
+        %p= @doc.content
+        = link_to "All Documents", docs_path, class: "btn btn-primary btn-large"
+        = link_to "Fix Document", edit_doc_path(@doc), class: "btn btn-info btn-large"
+        = link_to "Trash", doc_path(@doc), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-large"
